<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/madera" >

    <RadioButton
        android:id="@+id/normalRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="129dp"
        android:layout_y="98dp"
        android:text="@string/normal" />

    <RadioButton
        android:id="@+id/dificilRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="130dp"
        android:layout_y="163dp"
        android:text="@string/dificil" />

    <TextView
        android:id="@+id/dificultadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="50dp"
        android:text="@string/nivel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</AbsoluteLayout>